--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -4,8 +4,8 @@ html, body {
 }
 
 body {
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
 }
 
 * {
@@ -69,6 +69,35 @@ body {
   height: 138px;
   padding: 10px;
   margin-top: -100px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-over-container {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px black;
+  width: 138px;
+  height: 103px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.hidden {
+  display: none;
 }
 
 @media screen and (min-width:600px) {
