--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -14,6 +14,7 @@ body {
 
 .header {
   height: 50px;
+  padding: 5px 5px;
 }
 
 .main {
@@ -31,45 +32,42 @@ body {
 
 .scores-container {
   order: 1;
-  background: yellow;
   flex-basis: 100%;
   padding: 5px;
 }
 
 .play-container {
   order: 2;
-  background: red;
   flex-basis: 100%;
   display: flex;
 }
 
 .train-container {
   order: 1;
-  background: blue;
   flex-basis: 100%;
-  padding-top: 125px;
+  padding: 140px 0px 0px 25px;
 }
 
 .deck-container {
   order: 2;
-  background: forestgreen;
   flex-basis: 100%;
-}
-
-.deck-button {
-  background-image: url("../img/Back\ Blue\ 2.png");
-  width: 103px;
-  height: 138px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card-container {
   background-color: white;
   border-radius: 10px;
   box-shadow: 1px 1px 3px black;
-  width: 103px;
-  height: 138px;
   padding: 10px;
-  margin-top: -100px;
+  margin-top: -125px;
+  font-size: 2em;
+}
+
+.card-size {
+  width: 164px;
+  height: 189px;
 }
 
 .invalid-card {
@@ -77,7 +75,7 @@ body {
 }
 
 .invalid-card div {
-  font-size: 4em;
+  font-size: 3em;
   text-align: center;
 }
 
@@ -101,7 +99,7 @@ body {
   height: 200px;
   padding: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
 }
@@ -113,6 +111,32 @@ body {
 .score-container {
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+
+.score-container:hover {
+  background-color: lightgray;
+}
+
+.score-container .tooltip-text {
+  visibility: hidden;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  box-shadow: 1px 1px 3px gray;
+  width: 75px;
+  top: -5px;
+  left: 105%;
+  position: absolute;
+  z-index: 1;
+}
+
+.score-container:hover .tooltip-text {
+  visibility: visible;
+}
+
+.tooltip-text ul {
+  padding: 0;
 }
 
 .scores-header {
@@ -120,12 +144,12 @@ body {
   justify-content: space-between;
 }
 
-#scores-list {
-  list-style-type: none;
-}
-
 .score-list-header {
   font-weight: bold;
+}
+
+.list-style-type-none {
+  list-style-type: none;
 }
 
 .hidden {
