--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,188 +1,189 @@
-html, body {
-  margin: 0;
-  padding: 0;
+html,
+body {
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+	width: 100vw;
+	height: 100vh;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .header {
-  height: 50px;
-  padding: 5px 5px;
+	height: 50px;
+	padding: 5px 5px;
 }
 
 .main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: auto;
-  height: calc(100% - 50px);
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-auto-rows: auto;
+	height: calc(100% - 50px);
 }
 
 .title {
-  margin: 0;
+	margin: 0;
 }
 
 .scores-container {
-  padding: 5px;
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
+	padding: 5px;
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 3;
+	grid-row-end: 4;
 }
 
 .train-container {
-  padding: 140px 0px 0px 25px;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
+	padding: 140px 0px 0px 25px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 3;
 }
 
 .deck-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 3;
 }
 
 .card-container {
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 1px 1px 3px black;
-  padding: 10px;
-  margin-top: -125px;
-  font-size: 2em;
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: 1px 1px 3px black;
+	padding: 10px;
+	margin-top: -125px;
+	font-size: 2em;
 }
 
 .card-size {
-  width: 164px;
-  height: 189px;
+	width: 164px;
+	height: 189px;
 }
 
 .invalid-card {
-  margin-left: 50px;
+	margin-left: 50px;
 }
 
 .invalid-card div {
-  font-size: 3em;
-  text-align: center;
+	font-size: 3em;
+	text-align: center;
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .game-over-container {
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 1px 1px 3px black;
-  width: 175px;
-  height: 200px;
-  padding: 10px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
+	background-color: white;
+	border-radius: 5px;
+	box-shadow: 1px 1px 3px black;
+	width: 175px;
+	height: 200px;
+	padding: 10px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-direction: column;
 }
 
 .game-over-container p {
-  margin: 5px;
+	margin: 5px;
 }
 
 .score-container {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
+	display: flex;
+	justify-content: space-between;
+	position: relative;
 }
 
 .score-container:hover {
-  background-color: lightgray;
+	background-color: lightgray;
 }
 
 .score-container .tooltip-text {
-  visibility: hidden;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
-  box-shadow: 1px 1px 3px gray;
-  background-color: white;
-  width: 75px;
-  bottom: 100%;
-  left: 50%; 
-  margin-left: -60px;
-  position: absolute;
-  z-index: 1;
+	visibility: hidden;
+	text-align: center;
+	padding: 5px 0;
+	border-radius: 6px;
+	box-shadow: 1px 1px 3px gray;
+	background-color: white;
+	width: 75px;
+	bottom: 100%;
+	left: 50%;
+	margin-left: -60px;
+	position: absolute;
+	z-index: 1;
 }
 
 .score-container:hover .tooltip-text {
-  visibility: visible;
+	visibility: visible;
 }
 
 .tooltip-text ul {
-  padding: 0;
+	padding: 0;
 }
 
 .scores-header {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 
 .score-list-header {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .list-style-type-none {
-  list-style-type: none;
+	list-style-type: none;
 }
 
 .hidden {
-  display: none;
+	display: none;
 }
 
-@media screen and (min-width:600px) {
-  .main {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: auto;
-  }
-  .scores-container {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
-  }
-  .train-container {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-  }
-  .deck-container {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 3;
-  }
-  .score-container .tooltip-text {
-    top: -5px;
-    left: 105%;
-    margin-left: 0;
-    bottom: auto;
-  }
+@media screen and (min-width: 600px) {
+	.main {
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-auto-rows: auto;
+	}
+	.scores-container {
+		grid-column-start: 1;
+		grid-column-end: 2;
+		grid-row-start: 1;
+		grid-row-end: 3;
+	}
+	.train-container {
+		grid-column-start: 2;
+		grid-column-end: 3;
+		grid-row-start: 1;
+		grid-row-end: 3;
+	}
+	.deck-container {
+		grid-column-start: 3;
+		grid-column-end: 4;
+		grid-row-start: 1;
+		grid-row-end: 3;
+	}
+	.score-container .tooltip-text {
+		top: -5px;
+		left: 105%;
+		margin-left: 0;
+		bottom: auto;
+	}
 }
