--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -18,30 +18,30 @@ body {
 	padding: 5px 5px;
 }
 
+.title {
+	margin: 0;
+}
+
 .main {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr;
 	grid-auto-rows: auto;
 	height: calc(100% - 50px);
 }
 
 .footer {
-	grid-column-start: 2;
-	grid-column-end: 3;
-	grid-row-start: 3;
-	grid-row-end: 4;
-}
-
-.title {
-	margin: 0;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 6;
+	grid-row-end: 7;
 }
 
 .scores-container {
 	padding: 5px;
 	grid-column-start: 1;
 	grid-column-end: 2;
-	grid-row-start: 1;
-	grid-row-end: 3;
+	grid-row-start: 5;
+	grid-row-end: 6;
 }
 
 .play-container {
@@ -50,17 +50,17 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	grid-column-start: 2;
-	grid-column-end: 3;
+	grid-column-start: 1;
+	grid-column-end: 2;
 	grid-row-start: 1;
-	grid-row-end: 4;
+	grid-row-end: 3;
 }
 
 .rules-container {
-	grid-column-start: 3;
-	grid-column-end: 4;
-	grid-row-start: 1;
-	grid-row-end: 2;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 3;
+	grid-row-end: 4;
 }
 
 .about-container {
@@ -70,8 +70,8 @@ body {
 	padding: 5px;
 	grid-column-start: 1;
 	grid-column-end: 2;
-	grid-row-start: 3;
-	grid-row-end: 4;
+	grid-row-start: 4;
+	grid-row-end: 5;
 }
 
 .scroll-container {
@@ -79,7 +79,7 @@ body {
 }
 
 .train-container {
-	padding: 140px 0px 10px 0px;
+	padding: 60px 0px 10px 0px;
 	overflow: visible;
 	display: flex;
 	flex-direction: column;
@@ -99,12 +99,12 @@ body {
 	border-radius: 10px;
 	box-shadow: 1px 1px 3px black;
 	padding: 10px;
-	margin-top: -125px;
+	margin-top: -50px;
 }
 
 .card-size {
-	width: 164px;
-	height: 189px;
+	width: 100px;
+	height: 100px;
 }
 
 .big-font {
@@ -116,7 +116,6 @@ body {
 }
 
 .invalid-card div {
-	font-size: 3em;
 	text-align: center;
 }
 
@@ -200,10 +199,66 @@ body {
 }
 
 @media screen and (min-width: 600px) {
+	.main {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	
+	.footer {
+		grid-column-start: 2;
+		grid-column-end: 3;
+		grid-row-start: 3;
+		grid-row-end: 4;
+	}
+	
+	.scores-container {
+		grid-column-start: 1;
+		grid-column-end: 2;
+		grid-row-start: 1;
+		grid-row-end: 3;
+	}
+	
+	.play-container {
+		grid-column-start: 2;
+		grid-column-end: 3;
+		grid-row-start: 1;
+		grid-row-end: 4;
+	}
+	
+	.rules-container {
+		grid-column-start: 3;
+		grid-column-end: 4;
+		grid-row-start: 1;
+		grid-row-end: 2;
+	}
+	
+	.about-container {
+		grid-column-start: 1;
+		grid-column-end: 2;
+		grid-row-start: 3;
+		grid-row-end: 4;
+	}
+
 	.score-container .tooltip-text {
 		top: -5px;
 		left: 105%;
 		margin-left: 0;
 		bottom: auto;
+	}
+
+	.card-size {
+		width: 164px;
+		height: 189px;
+	}
+
+	.card-container {
+		margin-top: -125px;
+	}
+
+	.invalid-card div {
+		font-size: 3em;
+	}
+
+	.train-container {
+		padding: 140px 0px 10px 0px;
 	}
 }
